api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-app
  template:
    metadata:
      name: api-app
      labels:
        component: api-app
    spec:
      containers:
        - name: api-app
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "375Mi"
              cpu: "300m"
          volumeMounts:
            - name: api-data
              mountPath: /opt/app/uploads
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: api-pvc
