deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: conv-app
  template:
    metadata:
      name: conv-app
      labels:
        component: conv-app
    spec:
      containers:
        - name: conv-app
          image: antonlarichev/conv-app:1.2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "375Mi"
              cpu: "300m"
