service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: service-app
  template:
    metadata:
      name: service-app
      labels:
        component: service-app
    spec:
      containers:
        - name: service-app
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: "375Mi"
              cpu: "300m"
