clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    component: conv-app
