service-clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-service-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 4000
      protocol: TCP
  selector:
    component: service-app
